src/test/deca/context/invalid/created/Objet/Passe_1/SameNameClass.deca
// Description:
//    teste la declaration multiple d'une classe
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : Error: Multiple declaration of A, first declaration at [6, 0]

class A {

}

class A {

}

{

}